# Smart-Turtle

./: .gitignore  LICENSE  README.md
Smart-Turtle-Brain/src/cam_driver/include/: CameraDefine.h
Smart-Turtle-Brain/src/cam_driver/src/: MVCamera.cpp  MVCamera_node.cpp
Smart-Turtle-Brain/src/msg_analyzation/: CMakeLists.txt  package.xml
Smart-Turtle-Brain/src/mv_driver/src/: mv_driver.cpp
Smart-Turtle-Brain/src/rc_msgs/: CMakeLists.txt
Smart-Turtle-Brain/src/rc_msgs/msg/: detection.msg  single_result.msg
Smart-Turtle-Brain/src/rc_msgs_analyzation/: CMakeLists.txt  package.xml
Smart-Turtle-Brain/src/rc_msgs_analyzation/src/: rc_msgs_analyzation_node.cpp
Smart-Turtle-Brain/src/robot_serial/: CMakeLists.txt  package.xml
Smart-Turtle-Brain/src/robot_serial/include/: robotComm.h
Smart-Turtle-Brain/src/robot_serial/msg/: kalman.msg
Smart-Turtle-Brain/src/robot_serial/serialib/: CMakeLists.txt
Smart-Turtle-Brain/src/robot_serial/src/: main.cpp
Smart-Turtle-Cerebellum/src/rc_msgs/: CMakeLists.txt  package.xml
Smart-Turtle-Cerebellum/src/rc_msgs/msg/: identify_results.msg  results.msg
Smart-Turtle-Cerebellum/src/yolo_identify/: .gitignore
Smart-Turtle-Cerebellum/src/yolo_identify/include/yolo/: yolo.hpp
Smart-Turtle-Cerebellum/src/yolo_identify/src/: yolo.cu  yolov7.cpp
Smart-Turtle-Cerebellum/src/yolo_identify_v5/: CMakeLists.txt  package.xml
Smart-Turtle-Cerebellum/src/yolo_identify_v5/include/yolo/: logging.h  yololayer.h
Smart-Turtle-Cerebellum/src/yolo_identify_v5/msg/: identify.msg
Smart-Turtle-Cerebellum/src/yolo_identify_v5/src/: yolov5.cpp
Smart-Turtle-Client/src/rc_msgs/cfg/: stepConfig.cfg
Smart-Turtle-Client/src/yolo_identify/: CMakeLists.txt
Smart-Turtle-Client/src/yolo_identify/src/: yolov7.cpp
Smart-Turtle-Client/src/yolo_identify_v5/src/: yolov5.cpp
Smart-Turtle-Legs/: .cproject  .mxproject  .project  CMakeLists.txt  Smart_Turtle.ioc  stm32F4discovery.cfg
Smart-Turtle-Legs/Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
Smart-Turtle-Legs/Core/Mycode/App/: pid.c  pid.h
Smart-Turtle-Legs/Core/Mycode/BSP/: bsp_can.c  bsp_can.h  bsp_rc.c  bsp_usart.c  bsp_usart.h  remote_control.c  remote_control.h
Smart-Turtle-Legs/Core/Mycode/Task/: Chassis_Task.c  Chassis_Task.h
Smart-Turtle-Legs/Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  usart.c
Smart-Turtle-Server/cam_driver/: CMakeLists.txt
Smart-Turtle-Server/src/cam_driver/: CMakeLists.txt  package.xml
Smart-Turtle-Server/src/cam_driver/include/: MVCamera.h  video_saver.h
Smart-Turtle-Server/src/mv_driver/: CMakeLists.txt  package.xml
Smart-Turtle-Server/src/video_pub/: CMakeLists.txt
Smart-Turtle-Server/src/ydlidar_ros_driver/src/: ydlidar_ros_driver.cpp
Smart-Turtle-Server/video_pub/: CMakeLists.txt
cam_driver/: CMakeLists.txt
cam_driver/include/: CameraDefine.h  CameraStatus.h
cam_driver/src/: MVCamera_node.cpp
devel/: .catkin  local_setup.sh
devel/lib/pkgconfig/: cam_driver.pc  mv_driver.pc  video_pub.pc  ydlidar_ros_driver.pc
devel/share/cam_driver/cmake/: cam_driverConfig.cmake
devel/share/mv_driver/cmake/: mv_driverConfig.cmake
devel/share/video_pub/cmake/: video_pubConfig.cmake
devel/share/ydlidar_ros_driver/cmake/: ydlidar_ros_driverConfig.cmake
mv_driver/launch/: test.launch
mv_driver/src/: .mv_driver.cpp.swp  mv_driver.cpp
openvino_identify/: CMakeLists.txt  package.xml
openvino_identify/scripts/: classes.txt  identify.py
racecar_detect/: CMakeLists.txt
racecar_detect/launch/: detect_lane.launch
racecar_detect/nodes/: detect_lane
serial_car/: CMakeLists.txt  package.xml
serial_car/src/: serial_car.cpp
serial_port/: CMakeLists.txt  package.xml
serial_port/include/serial_port/: serialPort.h
serial_port/include/serial_port/msgSerializer/: check.h
serial_port/msg/: text.msg
serial_port/src/: main.cpp  serialPort.cpp
video_pub/: CMakeLists.txt
video_pub/src/: video_pub.cpp
ydlidar_ws/devel/: .catkin
ydlidar_ws/devel/lib/pkgconfig/: ydlidar_ros_driver.pc
ydlidar_ws/devel/lib/ydlidar_ros_driver/: ydlidar_ros_driver_node
ydlidar_ws/devel/share/ydlidar_ros_driver/cmake/: ydlidar_ros_driverConfig.cmake
